# fake_news1

./: README.md
python app/: PRD.md  README.md  fix_db.py  global_news_analysis.json  live_news_json.py  live_news_result.json  main.py  multi_platform_news_analyzer.py  predict_google_news.py  predict_json_test.py  predict_test.py  prediction_report.txt  pyproject.toml  pyrightconfig.json  requirements.txt  test_result.json  users.db  vercel.json  web_server.py
python app/api/: index.py
python app/app/: streamlit_app.py
python app/data/: news.csv
python app/models/: model.pkl  tfidf.pkl
python app/src/: bert_model.py  database.py  google_news.py  predict.py  preprocessing.py  train_model.py
python app/static/: index.html  login.html  login.js  script.js  style.css
